# hands-on-machine-learning

./: ML.md  README.md  pyproject.toml
projects/: README.md
projects/chapter_2/: README.md
tutorials/: README.md
tutorials/auto_differentiation/: main.py
tutorials/differential_calculus/: main.py
tutorials/linear_algebra/: main.py
tutorials/matplotlib/: main.py
tutorials/numpy/: main.py
tutorials/pandas/: main.py
tutorials/poetry/: README.md
tutorials/pyenv/: README.md
