[tool.poetry]
name = "hands-on-machine-learning"
version = "0.1.0"
description = ""
authors = ["Dyarlen Iber <dyarlen1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
